@@ -3,6 +3,7 @@ package com.econovation.idp.global.common.helper;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Component;
@@ -21,25 +22,25 @@ public class SpringEnvironmentHelper {
 
     public Boolean isProdProfile() {
         String[] activeProfiles = environment.getActiveProfiles();
-        List<String> currentProfile = Arrays.stream(activeProfiles).toList();
+        List<String> currentProfile = Arrays.stream(activeProfiles).collect(Collectors.toList());
         return currentProfile.contains(PROD);
     }
 
     public Boolean isStagingProfile() {
         String[] activeProfiles = environment.getActiveProfiles();
-        List<String> currentProfile = Arrays.stream(activeProfiles).toList();
+        List<String> currentProfile = Arrays.stream(activeProfiles).collect(Collectors.toList());
         return currentProfile.contains(STAGING);
     }
 
     public Boolean isDevProfile() {
         String[] activeProfiles = environment.getActiveProfiles();
-        List<String> currentProfile = Arrays.stream(activeProfiles).toList();
+        List<String> currentProfile = Arrays.stream(activeProfiles).collect(Collectors.toList());
         return currentProfile.contains(DEV);
     }
 
     public Boolean isProdAndStagingProfile() {
         String[] activeProfiles = environment.getActiveProfiles();
-        List<String> currentProfile = Arrays.stream(activeProfiles).toList();
+        List<String> currentProfile = Arrays.stream(activeProfiles).collect(Collectors.toList());
         return CollectionUtils.containsAny(PROD_AND_STAGING, currentProfile);
     }
 }
